--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,6 @@ spring.jpa.show-sql=true
 
 spring.main.allow-bean-definition-overriding=true
 #spring.sql.init.mode=always
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
 #spring.datasource.initialize=true
 
