--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=didr
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #sql
 spring.jpa.show-sql=true
@@ -17,3 +17,7 @@ spring.main.allow-bean-definition-overriding=true
 #spring.datasource.initialization-mode=always
 #spring.datasource.initialize=true
 
+#multi-file config
+spring.servlet.multipart.max-file-size=128KB
+spring.servlet.multipart.max-request-size=128KB
+spring.http.multipart.enabled=false
